@@ -19,3 +19,11 @@ describe GChart::Pie, "#query_params" do
     @chart.query_params["chl"].should == "foo"
   end
 end
+
+describe GChart::Pie, "#data" do
+  it "complains if you provide more than one set of data" do
+    lambda { GChart::Pie.new(:data => [1, 2, 3]) }.should_not raise_error(ArgumentError)
+    lambda { GChart::Pie.new(:data => [[1, 2, 3]]) }.should_not raise_error(ArgumentError)
+    lambda { GChart::Pie.new(:data => [[1, 2, 3], [3, 2, 1]]) }.should raise_error(ArgumentError)
+  end
+end
